<resources>
    <string name="app_name">LoginForm</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login"><u>Login</u></string>
    <string name="register"><u>Register</u></string>
    <string name="does_not_have_an_account">Does not have an account?</string>
    <string name="login_text">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_are_logged_in_successfully">You are logged in successfully</string>
    <string name="logout_btn">Logout</string>
</resources>